--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,5 +1,5 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
+# Read about fixtures at
+# http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 one:
   title: MyString
   description: MyText
@@ -11,7 +11,6 @@ two:
   description: MyText
   image_url: MyString
   price: 9.99
-
 #START:ruby
 
 ruby: 
